# fp-lab3

./: .gitignore  .gitlab-ci.yml  README.md  dune-project
.github/workflows/: ci.yml
_build/: .db  .digest-db  log
_build/default/.dune/: configurator  configurator.v2
_build/default/src/: interpolation.cma  interpolation.cmxa  interpolation.cmxs  interpolation.ml  main.ml
_build/default/src/.interpolation.objs/byte/: interpolation.cmi  interpolation.cmo  interpolation.cmt
_build/default/src/.interpolation.objs/native/: interpolation.cmx
_build/default/src/.main.eobjs/byte/: dune__exe__Main.cmti
_build/default/src/.main.eobjs/native/: dune__exe__Main.cmx
_build/default/src/.merlin-conf/: exe-main  lib-interpolation
_build/default/test/: test_linear.ml  test_newton.ml  test_parsing.ml  test_stream.ml
_build/default/test/.merlin-conf/: exe-test_linear  exe-test_newton  exe-test_parsing
_build/default/test/.test_linear.eobjs/byte/: dune__exe__Test_linear.cmi  dune__exe__Test_linear.cmti
_build/default/test/.test_linear.eobjs/native/: dune__exe__Test_linear.cmx
_build/default/test/.test_newton.eobjs/byte/: dune__exe__Test_newton.cmi  dune__exe__Test_newton.cmti
_build/default/test/.test_newton.eobjs/native/: dune__exe__Test_newton.cmx
_build/default/test/.test_parsing.eobjs/byte/: dune__exe__Test_parsing.cmi  (+1 more)
src/: dune  float_util.ml  grid_util.ml  interp_sig.ml  interpolation.ml  linear.ml  linear.mli  main.ml  newton.ml  newton.mli  parsing.ml  runner.ml
test/: dune  test_linear.ml  test_newton.ml  test_parsing.ml
(+1 files in other folders)
